--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Epanchayat"
         tools:targetApi="31">
+        <activity
+            android:name=".Complaintlist"
+            android:exported="true" />
+
+        <activity
+            android:name=".addComplaint"
+            android:exported="true" />
         <activity
             android:name=".Memberlist"
             android:exported="true" />
