--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Epanchayat"
         tools:targetApi="31">
         <activity
+            android:name=".Forgot_Password"
+            android:exported="true" />
+        <activity
             android:name=".viewComplaintlist"
             android:exported="true" />
         <activity
